--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ingress-nginx
+  - nvidia-device-plugin
 helmCharts:
   # CNI: cillium
   - repo: https://helm.cilium.io
