--- a/base/rook-ceph/kustomization.yaml
+++ b/base/rook-ceph/kustomization.yaml
@@ -1,11 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
-helmCharts:
-  # rook operator
-  - repo: https://charts.rook.io/release
-    name: rook-ceph
-    namespace: rook-ceph
-    valuesInline:
-      enableDiscoveryDaemon: true
+  # reference: https://rook.io/docs/rook/v1.12/CRDs/Cluster/external-cluster/#manifest-installation
+  - https://raw.githubusercontent.com/rook/rook/refs/tags/v1.17.3/deploy/examples/crds.yaml
+  - https://raw.githubusercontent.com/rook/rook/refs/tags/v1.17.3/deploy/examples/operator.yaml
+  - https://raw.githubusercontent.com/rook/rook/refs/tags/v1.17.3/deploy/examples/common.yaml
+  - https://raw.githubusercontent.com/rook/rook/refs/tags/v1.17.3/deploy/examples/common-external.yaml
+  - https://raw.githubusercontent.com/rook/rook/refs/tags/v1.17.3/deploy/examples/cluster-external.yaml
