--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,8 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # ingress: ingress-nginx
-  - https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.12.2/deploy/static/provider/cloud/deploy.yaml
   # nvidia-device-plugin
   - https://raw.githubusercontent.com/NVIDIA/k8s-device-plugin/v0.17.2/deployments/static/nvidia-device-plugin.yml
   # cert manager
@@ -12,7 +10,16 @@ resources:
   # storage: PVE ceph cluster
   - rook-ceph
 helmCharts:
-  # CNI: cillium
+  # CNI & ingress: cillium
   - repo: https://helm.cilium.io
     name: cilium
     namespace: kube-system
+    valuesInline:
+      # needed for ingressController
+      nodePort:
+        enabled: true
+      ingressController:
+        enabled: true
+        default: true
+        # share 1 loadbalancer service for all ingress resources
+        loadbalancerMode: shared
