feat(rbac): add 'user' rbac cluster role

--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - kube-prometheus
   # storage: PVE ceph cluster
   - rook-ceph
+  - rbac
 helmCharts:
   # CNI & ingress: cillium
   - repo: https://helm.cilium.io
