feat: implement k8s microsoft login auth via dex
Squashed commit of the following:

commit 129ed78b4eee36db09db4fc37392f48272af7c8b
Merge: 19b13473 40d2b00b
Author: Zhu Zhanyan <program.nom@gmail.com>
Date:   Tue Jun 3 21:42:52 2025 +0800

    Merge branch 'main' into feat/dex-auth

commit 19b1347389b2082471d79324718880c5d28b7528
Author: Zhu Zhanyan <program.nom@gmail.com>
Date:   Tue Jun 3 21:39:57 2025 +0800

    build: add krew to .tool-versions

commit 3e70527ebaf065f57f95c3a6d5aa4de7af1c251c
Author: Zhu Zhanyan <program.nom@gmail.com>
Date:   Tue Jun 3 21:36:48 2025 +0800

    feat(rbac): add namespace-user role to user access to specific namespace

commit e840c2b8ca6ad38c662b9f1a49eacd1c25f56dbd
Author: Zhu Zhanyan <program.nom@gmail.com>
Date:   Tue Jun 3 21:15:45 2025 +0800

    feat: config dex for k8s kubelogin auth with microsoft connector

commit 4e00b5807f97bac66f0d691317f4420a8d54722a
Author: Zhu Zhanyan <program.nom@gmail.com>
Date:   Tue Jun 3 15:36:51 2025 +0800

    chore(git): ignore .envrc direnv file

commit 71f6f46c852e471499066f020694e1a9fbac10b2
Author: Zhu Zhanyan <program.nom@gmail.com>
Date:   Tue Jun 3 15:36:25 2025 +0800

    refactor(network): issue tls cert via production letsencrypt endpoint

commit 02d2a76dce14dc7c4dc2ea801ccbe03a756dea69
Author: Zhu Zhanyan <program.nom@gmail.com>
Date:   Tue Jun 3 15:19:56 2025 +0800

    feat: configure cert-manager to issue tls with letsencrypt-staging

commit af03262cf134442fab911acede2356cd1422caa6
Author: Zhu Zhanyan <program.nom@gmail.com>
Date:   Tue Jun 3 09:45:23 2025 +0800

    feat(network): add support for gateway api

commit 793df8b9f8c5f7a9daffba7ef334f178a280bfb5
Author: Zhu Zhanyan <program.nom@gmail.com>
Date:   Tue Jun 3 09:44:54 2025 +0800

    refactor: replace auth base with cert-manager base

commit 32faa9050ec86e35c0f444dbc9f43f38420dcfab
Author: Zhu Zhanyan <program.nom@gmail.com>
Date:   Mon Jun 2 08:47:25 2025 +0800

    feat(pki): create self signed ca and certificate for

--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,26 +1,33 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  # gateway api
+  - https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.3.0/standard-install.yaml
   # nvidia-device-plugin
   - https://raw.githubusercontent.com/NVIDIA/k8s-device-plugin/v0.17.2/deployments/static/nvidia-device-plugin.yml
-  # cert manager
-  - https://github.com/cert-manager/cert-manager/releases/download/v1.17.2/cert-manager.yaml
   # monitoring stack: kube-prometheus stack
   - kube-prometheus
   # storage: PVE ceph cluster
   - rook-ceph
+  # cert manager
+  - cert-manager
+  # networking
+  - network
+  # dex: identity provider
+  - dex
+  # access control
   - rbac
 helmCharts:
-  # CNI & ingress: cillium
+  # CNI & ingress: cilium
   - repo: https://helm.cilium.io
     name: cilium
     namespace: kube-system
     valuesInline:
-      # needed for ingressController
+      # needed for ingressController & gateway api support
       nodePort:
         enabled: true
-      ingressController:
+      gatewayAPI:
         enabled: true
-        default: true
-        # share 1 loadbalancer service for all ingress resources
-        loadbalancerMode: shared
+        # ensure gateway class is created as it expected by cilium-operator
+        gatewayClass:
+          create: "true"
